--- a/shoe website.css
+++ b/shoe website.css
@@ -378,6 +378,7 @@ footer .follow i:hover {
     scroll-behavior: smooth;
     box-sizing: border-box;
 }
+/* *************************** Zoomed effect********************************** */
 figure .full-Img{
     width: 100%;
     height: 100vh;
@@ -397,6 +398,7 @@ figure .full-Img img {
     width: 90%;
     max-width: 450px;
     margin-left: 5rem;
+    border-radius: 5px;
 }
 .full-image-description{
     position: relative;
@@ -451,4 +453,7 @@ figure{
  
     color: yellow;
     font-size: 12px;
+}
+.full-image-description #fav-icon{
+    font-size: 20px;
 }
